adds displayed html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>JavaScript DrumKit</title>
     <meta name="author" content="Tiffany Ray" />
     <meta name="description" content="drumkit player by pressing keys" />
-    <meta charset="UTF-8">
-  </head>
+    <meta charset="UTF-8" />
+</head>
+
+<body>
+    <div class="keys">
+        <div>
+            <kbd>A</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>S</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>D</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>F</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>G</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>H</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>J</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>K</kbd>
+            <p>Something</p>
+        </div>
+        <div>
+            <kbd>L</kbd>
+            <p>Something</p>
+        </div>
+    </div>
+</body>
+
 </html>
