Adds audio to html

--- a/index.html
+++ b/index.html
@@ -10,43 +10,53 @@
 
 <body>
     <div class="keys">
-        <div>
+        <div data-key="65" class="key">
             <kbd>A</kbd>
-            <p>Something</p>
+            <p>Hihat</p>
         </div>
-        <div>
+        <div data-key="83" class="key">
             <kbd>S</kbd>
-            <p>Something</p>
+            <p>Impact</p>
         </div>
-        <div>
+        <div data-key="68" class="key">
             <kbd>D</kbd>
-            <p>Something</p>
+            <p>Club Kick</p>
         </div>
-        <div>
+        <div data-key="70" class="key">
             <kbd>F</kbd>
-            <p>Something</p>
+            <p>Hard Kick</p>
         </div>
-        <div>
+        <div data-key="71" class="key">
             <kbd>G</kbd>
-            <p>Something</p>
+            <p>Progressive Kick</p>
         </div>
-        <div>
+        <div data-key="72" class="key">
             <kbd>H</kbd>
-            <p>Something</p>
+            <p>Ride</p>
         </div>
-        <div>
+        <div data-key="74" class="key">
             <kbd>J</kbd>
-            <p>Something</p>
+            <p>Light Snare</p>
         </div>
-        <div>
+        <div data-key="75" class="key">
             <kbd>K</kbd>
-            <p>Something</p>
+            <p>Big Snare</p>
         </div>
-        <div>
+        <div data-key="76" class="key">
             <kbd>L</kbd>
-            <p>Something</p>
+            <p>Tambourine</p>
         </div>
     </div>
+
+    <audio data-key="65" src="sounds/Hihat_02.wav"></audio>
+    <audio data-key="83" src="sounds/Impacts_05_128.wav"></audio>
+    <audio data-key="68" src="sounds/Kick_Club_06.wav"></audio>
+    <audio data-key="70" src="sounds/Kick_Hardstyle_02_E.wav"></audio>
+    <audio data-key="71" src="sounds/Kick_Progressive_08.wav"></audio>
+    <audio data-key="72" src="sounds/Ride_02.wav"></audio>
+    <audio data-key="74" src="sounds/Snare_03.wav"></audio>
+    <audio data-key="75" src="sounds/Snare_Bigroom_03.wav"></audio>
+    <audio data-key="76" src="sounds/Tambourine_02.wav"></audio>
 </body>
 
 </html>
