--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         </div>
         <div data-key="68" class="key">
             <kbd>D</kbd>
-            <p class="sound">Club Kick</p>
+            <p class="sound">Kick(1)</p>
         </div>
         <div data-key="70" class="key">
             <kbd>F</kbd>
-            <p class="sound">Hard Kick</p>
+            <p class="sound">Kick(2)</p>
         </div>
         <div data-key="71" class="key">
             <kbd>G</kbd>
-            <p>Progressive Kick</p>
+            <p class="sound">Kick(3)</p>
         </div>
         <div data-key="72" class="key">
             <kbd>H</kbd>
@@ -37,11 +37,11 @@
         </div>
         <div data-key="74" class="key">
             <kbd>J</kbd>
-            <p class="sound">Light Snare</p>
+            <p class="sound">Snare(1)</p>
         </div>
         <div data-key="75" class="key">
             <kbd>K</kbd>
-            <p class="sound">Big Snare</p>
+            <p class="sound">Snare(2)</p>
         </div>
         <div data-key="76" class="key">
             <kbd>L</kbd>
